--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/index.js",
-  "proxy": "http://localhost:4005",
+  "proxy": "http://localhost:4006",
   "nodemonConfig": {
     "ext": "js,sql",
     "ignore": [
@@ -27,9 +27,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-table": "^7.1.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "table": "^5.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
