--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ]
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
@@ -20,7 +20,6 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "jest": "^26.0.1",
     "massive": "^6.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -28,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-table": "^7.1.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
     "socket.io": "^2.3.0",
